MODROLESKC-172 Add folio-permission name to capability-set (#53)